add user history and make block's transaction a list