@@ -1,7 +1,7 @@
 package com.aseds.aithssainesbaiti.domain;
 
-
 import java.util.ArrayList;
+import java.util.List;
 
 public class Blockchain {
     private final ArrayList<Block> chain;
@@ -11,22 +11,23 @@ public class Blockchain {
         chain = new ArrayList<>();
         chain.add(createGenesisBlock());
     }
+
     public ArrayList<Block> getChain() {
         return chain;
     }
 
     private Block createGenesisBlock() {
-        return new Block(0, "0", new Transaction(0,0,0), 0);
+        return new Block(0, "0", new ArrayList<>(), 0); // Genesis block with empty transactions
     }
 
     public Block getLatestBlock() {
-        return chain.getLast();
+        return chain.get(chain.size() - 1);
     }
 
-    public Block addBlock(Transaction data) {
+    public Block addBlock(List<Transaction> transactions) {
         Block previousBlock = getLatestBlock();
         int proof = generateProofOfWork(previousBlock.getProof());
-        Block newBlock = new Block(chain.size(), previousBlock.getHash(), data, proof);
+        Block newBlock = new Block(chain.size(), previousBlock.getHash(), transactions, proof);
         chain.add(newBlock);
         return newBlock;
     }
@@ -36,17 +37,14 @@ public class Blockchain {
             Block currentBlock = chain.get(i);
             Block previousBlock = chain.get(i - 1);
 
-            // Check if the hash is correct
             if (!currentBlock.getHash().equals(currentBlock.calculateHash())) {
                 return false;
             }
 
-            // Check if the previous hash matches
             if (!currentBlock.getPreviousHash().equals(previousBlock.getHash())) {
                 return false;
             }
 
-            // Validate the proof of work
             if (!isValidProof(previousBlock.getProof(), currentBlock.getProof())) {
                 return false;
             }
@@ -54,19 +52,6 @@ public class Blockchain {
         return true;
     }
 
-    public void printChain() {
-        for (Block block : chain) {
-            System.out.println("Index: " + block.getIndex());
-            System.out.println("Previous Hash: " + block.getPreviousHash());
-            System.out.println("Hash: " + block.getHash());
-            System.out.println("Data: " + block.getData());
-            System.out.println("Timestamp: " + block.getTimestamp());
-            System.out.println("Proof: " + block.getProof());
-            System.out.println("------------------------");
-        }
-    }
-
-    // Proof of Work: Generates a valid proof
     private int generateProofOfWork(int lastProof) {
         int proof = 0;
         while (!isValidProof(lastProof, proof)) {
@@ -75,7 +60,6 @@ public class Blockchain {
         return proof;
     }
 
-    // Validates the proof
     private boolean isValidProof(int lastProof, int proof) {
         String guess = lastProof + "" + proof;
         String guessHash = HashUtils.hash(guess);
